--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+ubuntusway-meta (1.5.2) UNRELEASED; urgency=medium
+
+  * Refreshed dependencies
+  * Added greetd to desktop [amd64]
+  * Added greetd-tuigreet to desktop [amd64]
+  * Added snapd to desktop-recommends
+  * Removed bash-completion from desktop
+  * Removed command-not-found from desktop
+  * Removed falkon from desktop
+  * Removed rsync from desktop
+  * Removed sddm from desktop
+  * Removed ubuntusway-default-settings from desktop [arm64]
+  * Removed ubuntusway-environment from desktop [arm64]
+
+ -- Aleksey Samoilov <samoilov.lex@gmail.com>  Thu, 05 May 2022 11:46:22 +0400
+
 ubuntusway-meta (1.5.1) jammy; urgency=medium
 
   * Refreshed dependencies
