--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+ubuntusway-meta (1.8) UNRELEASED; urgency=medium
+
+  * Refreshed dependencies
+  * Added firefox to desktop
+  * Added snapd to desktop-recommends
+  * Removed qutebrowser from desktop
+
+ -- Aleksey Samoilov <samoilov.lex@gmail.com>  Mon, 23 May 2022 21:07:42 +0400
+
 ubuntusway-meta (1.7) jammy; urgency=medium
 
   * Refreshed dependencies
