--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+ubuntusway-meta (1.12) jammy; urgency=medium
+
+  * Refreshed dependencies
+  * Added engrampa to desktop-recommends
+  * Added lxpolkit to desktop
+  * Added nwg-look to desktop
+  * Removed file-roller from desktop-recommends
+  * Removed policykit-1-gnome from desktop
+
+ -- Aleksey Samoilov <samoilov.lex@gmail.com>  Wed, 08 Jun 2022 18:39:34 +0400
+
 ubuntusway-meta (1.11) jammy; urgency=medium
 
   * Refreshed dependencies
