--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,14 @@
-ubuntusway-meta (1.28~kinetid) UNRELEASED; urgency=medium
+ubuntusway-meta (1.29~kinetic) kinetic; urgency=medium
 
+  [ root ]
   * Refreshed dependencies
   * Removed acpi-support from desktop-recommends [amd64]
   * Removed ubuntusway-rpi-default-settings from desktop [arm64]
 
- -- root <root@48244098939d>  Sat, 06 Aug 2022 11:11:58 +0000
+  [ Aleksey Samoilov ]
+  * Upload to Kinetic
+
+ -- Aleksey Samoilov <samoilov.lex@gmail.com>  Sat, 06 Aug 2022 15:20:06 +0400
 
 ubuntusway-meta (1.28~kinetic) kinetic; urgency=medium
 
