--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
-ubuntusway-meta (1.33~kinetid) UNRELEASED; urgency=medium
+ubuntusway-meta (1.34~kinetic) kinetic; urgency=medium
 
+  [ root ]
   * Refreshed dependencies
   * Added ubuntusway-welcome to desktop-recommends [amd64]
 
- -- root <root@d464fce2a3f2>  Wed, 07 Sep 2022 06:45:42 +0000
+  [ Aleksey Samoilov ]
+  * Update changelog
+
+ -- Aleksey Samoilov <samoilov.lex@gmail.com>  Wed, 07 Sep 2022 10:46:53 +0400
 
 ubuntusway-meta (1.33~kinetic) kinetic; urgency=medium
 
