--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,15 @@
-ubuntusway-meta (1.38~kinetid) UNRELEASED; urgency=medium
+ubuntusway-meta (1.39~kinetic) kinetic; urgency=medium
 
+  [ root ]
   * Refreshed dependencies
   * Added systemd-oomd to desktop-recommends
   * Added transmission-gtk to desktop-recommends
   * Removed transmission from desktop-recommends
 
- -- root <root@f80f317469a8>  Thu, 06 Oct 2022 15:19:14 +0000
+  [ Aleksey Samoilov ]
+  * Update changelog
+
+ -- Aleksey Samoilov <samoilov.lex@gmail.com>  Thu, 06 Oct 2022 19:19:46 +0400
 
 ubuntusway-meta (1.38~kinetic) kinetic; urgency=medium
 
