--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,14 @@
-ubuntusway-meta (1.41~kinetid) UNRELEASED; urgency=medium
+ubuntusway-meta (1.42~kinetic) kinetic; urgency=medium
 
+  [ root ]
   * Refreshed dependencies
   * Added nwg-bar to desktop
   * Removed wlogout from desktop
 
- -- root <root@5d5890007f15>  Wed, 19 Oct 2022 19:35:01 +0000
+  [ Aleksey Samoilov ]
+  * Update changelog
+
+ -- Aleksey Samoilov <samoilov.lex@gmail.com>  Wed, 19 Oct 2022 23:37:03 +0400
 
 ubuntusway-meta (1.41~kinetic) kinetic; urgency=medium
 
