--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
-ubuntusway-meta (1.42~kinetid) UNRELEASED; urgency=medium
+ubuntusway-meta (1.43~kinetic) kinetic; urgency=medium
 
+  [ root ]
   * Refreshed dependencies
   * Added breeze-cursor-theme to desktop
 
- -- root <root@c07037c98ace>  Sat, 29 Oct 2022 11:36:22 +0000
+  [ Aleksey Samoilov ]
+  * Update changelog
+
+ -- Aleksey Samoilov <samoilov.lex@gmail.com>  Sat, 29 Oct 2022 15:37:51 +0400
 
 ubuntusway-meta (1.42~kinetic) kinetic; urgency=medium
 
