--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-ubuntusway-meta (1.43~kinetid) UNRELEASED; urgency=medium
+ubuntusway-meta (1.43~kinetidubuntu1) UNRELEASED; urgency=medium
 
+  [ root ]
   * Refreshed dependencies
   * Added cage to desktop-recommends
   * Added calcurse to desktop
@@ -28,7 +29,11 @@ ubuntusway-meta (1.43~kinetid) UNRELEASED; urgency=medium
   * Removed wireplumber from desktop
   * Moved neovim to desktop-recommends
 
- -- root <root@3abccd95d1f1>  Sun, 05 Feb 2023 06:18:38 +0000
+
+  [ Aleksey Samoilov ]
+  * Initial upload to Lunar
+
+ -- Aleksey Samoilov <samoilov.lex@gmail.com>  Sun, 05 Feb 2023 10:19:32 +0400
 
 ubuntusway-meta (1.43~kinetic) kinetic; urgency=medium
 
