--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntusway-meta (1.43~kinetidubuntu1) UNRELEASED; urgency=medium
+ubuntusway-meta (1.44~lunar) lunar; urgency=medium
 
   [ root ]
   * Refreshed dependencies
