--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,14 @@
-ubuntusway-meta (1.45~lunas) UNRELEASED; urgency=medium
+ubuntusway-meta (1.46~lunar) lunar; urgency=medium
 
+  [ root ]
   * Refreshed dependencies
   * Added gron to desktop
   * Added ubuntusway-rpi-default-settings to desktop [arm64]
 
- -- root <root@1807210170d6>  Thu, 09 Feb 2023 06:04:44 +0000
+  [ Aleksey Samoilov ]
+  * Update packages
+
+ -- Aleksey Samoilov <samoilov.lex@gmail.com>  Thu, 09 Feb 2023 10:42:45 +0400
 
 ubuntusway-meta (1.45~lunar) lunar; urgency=medium
 
