--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
-ubuntusway-meta (1.46~lunas) UNRELEASED; urgency=medium
+ubuntusway-meta (1.47~lunar) lunar; urgency=medium
 
+  [ root ]
   * Refreshed dependencies
   * Added swappy to desktop
 
- -- root <root@95d9440741a8>  Wed, 15 Feb 2023 14:16:15 +0000
+  [ Aleksey Samoilov ]
+  * Added Swappy
+
+ -- Aleksey Samoilov <samoilov.lex@gmail.com>  Wed, 15 Feb 2023 18:17:19 +0400
 
 ubuntusway-meta (1.46~lunar) lunar; urgency=medium
 
