--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
-ubuntusway-meta (1.47~lunas) UNRELEASED; urgency=medium
+ubuntusway-meta (1.48~lunar) lunar; urgency=medium
 
+  [ root ]
   * Refreshed dependencies
   * Added inotify-tools to desktop
 
- -- root <root@7fbc1183e93a>  Thu, 16 Feb 2023 09:40:21 +0000
+  [ Aleksey Samoilov ]
+  * Update changelog
+
+ -- Aleksey Samoilov <samoilov.lex@gmail.com>  Thu, 16 Feb 2023 13:50:17 +0400
 
 ubuntusway-meta (1.47~lunar) lunar; urgency=medium
 
