--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
-ubuntusway-meta (1.48~lunas) UNRELEASED; urgency=medium
+ubuntusway-meta (1.49~lunar) lunar; urgency=medium
 
+  [ root ]
   * Refreshed dependencies
   * Added curl to desktop
 
- -- root <root@1a1800453bd5>  Thu, 16 Feb 2023 13:27:43 +0000
+  [ Aleksey Samoilov ]
+  * Update changelog
+
+ -- Aleksey Samoilov <samoilov.lex@gmail.com>  Thu, 16 Feb 2023 19:24:14 +0400
 
 ubuntusway-meta (1.48~lunar) lunar; urgency=medium
 
