--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,14 @@
-ubuntusway-meta (1.50~lunas) UNRELEASED; urgency=medium
+ubuntusway-meta (1.51~lunar) lunar; urgency=medium
 
+  [ root ]
   * Refreshed dependencies
   * Added pulsemixer to desktop
   * Moved playerctl to desktop
 
- -- root <root@06048bfea572>  Thu, 23 Feb 2023 21:05:31 +0000
+  [ Aleksey Samoilov ]
+  * Update changelog
+
+ -- Aleksey Samoilov <samoilov.lex@gmail.com>  Fri, 24 Feb 2023 01:08:00 +0400
 
 ubuntusway-meta (1.50~lunar) lunar; urgency=medium
 
