--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,13 @@
-ubuntusway-meta (1.51~lunas) UNRELEASED; urgency=medium
+ubuntusway-meta (1.52~lunar) lunar; urgency=medium
 
+  [ root ]
   * Refreshed dependencies
   * Added wayland-utils to desktop-recommends
-  * Removed lsb-release from minimal
 
- -- root <root@2f76224529d2>  Sat, 25 Feb 2023 12:55:28 +0000
+  [ Aleksey Samoilov ]
+  * Update changelog
+
+ -- Aleksey Samoilov <samoilov.lex@gmail.com>  Sat, 25 Feb 2023 18:26:48 +0400
 
 ubuntusway-meta (1.51~lunar) lunar; urgency=medium
 
