--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,16 @@
-ubuntusway-meta (1.54~lunas) UNRELEASED; urgency=medium
+ubuntusway-meta (1.55~lunar) lunar; urgency=medium
 
+  [ root ]
   * Refreshed dependencies
   * Added greetd-tuigreet to desktop-recommends
   * Added lsb-release to minimal
   * Removed greetd-gtkgreet from desktop-recommends
   * Removed lsb-release-minimal from minimal
 
- -- root <root@7d91052e2cb7>  Sat, 04 Mar 2023 06:36:45 +0000
+  [ Aleksey Samoilov ]
+  * Update
+
+ -- Aleksey Samoilov <samoilov.lex@gmail.com>  Sat, 04 Mar 2023 10:44:04 +0400
 
 ubuntusway-meta (1.54~lunar) lunar; urgency=medium
 
