--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-sway-meta (1.59~lunar) lunar; urgency=medium
+
+  * Build Raspberry Pi metapackage only for arm64
+
+ -- Aleksey Samoilov <samoilov.lex@gmail.com>  Sun, 12 Mar 2023 18:57:14 +0400
+
 ubuntu-sway-meta (1.58~lunar) lunar; urgency=medium
 
   [ root ]
