--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-ubuntu-sway-meta (1.61~lunas) UNRELEASED; urgency=medium
+ubuntu-sway-meta (1.62~mantic) mantic; urgency=medium
 
+  [ root ]
   * Refreshed dependencies
   * Added imv to desktop-raspi-recommends, desktop-recommends
   * Added sway-systemd to desktop, desktop-raspi
@@ -8,7 +9,10 @@ ubuntu-sway-meta (1.61~lunas) UNRELEASED; urgency=medium
   * Removed earlyoom from desktop-raspi-recommends, desktop-recommends
   * Removed swayimg from desktop-raspi-recommends, desktop-recommends
 
- -- root <root@7aee7e2d0270>  Wed, 16 Aug 2023 08:03:03 +0000
+  [ Aleksey Samoilov ]
+  * Update changelog
+
+ -- Aleksey Samoilov <samoilov.lex@gmail.com>  Wed, 16 Aug 2023 12:03:46 +0400
 
 ubuntu-sway-meta (1.61~lunar) lunar; urgency=medium
 
